Added "click/drag-to-seek" on the time control panel timeline bar
Fixed: Chart cursor shouldn't be draggable beyond data region.
Fixed: Chart cursor should only be visible during playback
Fixed: Recording progress bar should "fill up" during recording
Made "Reset All" button appear at the very bottom of the control panel.
Fixed: Object size is incorrect when changing objects and when object is motionless; need to switch between objects a few times to reproduce the problem; This also occurs on object change during record/playback
Added recording of whether walls are up or down
Added recording of the position of the stick figure
Made it so the chart cursor controls the playback time
Added recording for bead state
# 1.03.22 (33735) Jul 29, 2009
Added recording for ramp angle
Added recording for object type
Added series for friction work
Added series for thermal energy
Added series for gravitational force work
# 1.03.21 (33712) Jul 28, 2009
Added series for total, kinetic and potential energy
Added buttons to open Energy/Work graph
Removed Go and Pause buttons from Force chart control panel
Fixed: Make sure vector arrows overlap the chart and chart control panel
Added a control to enter applied force in the box next to label
Fixed: Force arrow slider should have a label to its left
Graph force labels should color match to vectors
Applied force is now adjusted to left of graph (to coordinate with the up/down graphing of force)
Fixed: Text readouts of values on the left shouldn't alter layout
Graphing modules start paused, unpause when a force is applied
Added stub for Work-Energy module
Allow one chart to take entire available area
# 1.03.20 (33360) Jul 15, 2009
> force-graphs: Objects are in pull-down menu in control panel instead of the play area
> force-graphs: Removed force control from play area
> Fixed: Vectors should be in the topmost layer (over the applied force slider)
> Centered the object selection panel
> Fixed: Object falls off edge at wrong spot